--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,9 +1,9 @@
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-YDV6B4PTVB"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-141573766-2"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-YDV6B4PTVB');
+  gtag('config', 'UA-141573766-2');
 </script>
