Update google analytics

--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -7,3 +7,13 @@
 
   gtag('config', 'UA-141573766-2');
 </script>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2GRHBJ5N16"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2GRHBJ5N16');
+</script>
